# sphinxcontrib.youtube

./: .gitignore  README.md  buildout.cfg  pyproject.toml  setup.py
.github/workflows/: release.yml
enginehub/sphinx_youtube/: __init__.py  youtube.py
src/enginehub/sphinx_youtube/: __init__.py  youtube.py
testdoc/: conf.py
