[project]
name = "enginehub.sphinx_youtube"
authors = [
    { name = "shomah4a" },
]
maintainers = [
    { name = "Maddy Miller" },
    { name = "Octavia Togami" },
]
version = "0.3.0.dev1"
description = "Embed YouTube videos in Sphinx documentation."
readme = "README.md"
license = "LGPL-3.0-only"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.10"
dependencies = [
    "docutils>=0.22.4",
]

[project.urls]
Repository = "https://github.com/EngineHub/sphinxcontrib.youtube"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "enginehub.sphinx_youtube"
